Fix the popup overlapping with mobile keyboard

--- a/src/components/screen-popup/screen-popup.less
+++ b/src/components/screen-popup/screen-popup.less
@@ -175,7 +175,9 @@
       padding: 12px;
       display: grid;
       position: absolute;
-      place-content: center;
+      align-items: center;
+      padding-top: 100px;
+      position: absolute;
       gap: 24px;
     }
 
